examples/test/testpolicy1436.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1436
  namespace: namespace73
spec:
  podSelector:
    matchLabels:
      key15: value25
      key45: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value30
      podSelector:
        matchLabels:
          key37: value34
          key29: value18
          key49: value46
